fix overflow

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -577,8 +577,9 @@ main.post-list {
       display: flex;
       background-color: #fff;
       flex-direction: column;
-      width: 32%;
       margin: 1rem;
+      flex: 1;
+      flex-basis:300px;
 
       @media (prefers-color-scheme: dark) {
         background-color: #111111;
